Filter Class Added , DataBase problem fixed